change in env.dist

--- a/env.dist
+++ b/env.dist
@@ -1,6 +1,5 @@
 # CONFIG GENERAL SETTINGS
 SETTINGS=core.settings.development
-API_BASE_URL=xxxxxxxx
 PRODUCTION_DOMAIN=xxxxxxxx
 SECRET_KEY=xxxxxxxx
 
@@ -8,13 +7,13 @@ SECRET_KEY=xxxxxxxx
 POSTGRES_DB=xxxxxxx
 POSTGRES_USER=xxxxxxxx
 POSTGRES_PASSWORD=xxxxxxxx
-POSTGRES_HOST=xxxxxxxx
-POSTGRES_PORT=xxxx
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 
 # CONFIG EMAIL
-EMAIL_HOST=xxxxxxxx
+EMAIL_HOST='your-smtp-server.com'
 EMAIL_PORT=xxxxxx
 EMAIL_USE_TLS=xxxxxxx
-EMAIL_HOST_USER=xxxxxxxx
-EMAIL_HOST_PASSWORD=xxxxxxxx
-DEFAULT_FROM_EMAIL=xxxxxxxx
+EMAIL_HOST_USER='your-email@example.com'
+EMAIL_HOST_PASSWORD='your-email-password'
+DEFAULT_FROM_EMAIL='webmaster@example.com'
